# rcli

./: .pre-commit-config.yaml  Cargo.toml  _typos.toml  cliff.toml  deny.toml  test.http
fixtures/: b64.txt  blake3.key  public.key  secret.key
src/: csv.rs  lib.rs  main.rs  opts.rs
src/cli/: base64.rs  csv.rs  gen_pass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: base64.rs  csv.rs  gen_pass.rs  http.rs  jwt.rs  text.rs
