[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust CLI"
repository = "https://github.com/InChh/rcli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
blake3 = "1.5.5"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
